tests/errors/kind2.f90
program kind2
implicit none

real(*) a

end program
